--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -60,7 +60,7 @@
         app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/login_login_button"
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginTop="24dp"
