--- a/app/src/main/res/layout/song_item.xml
+++ b/app/src/main/res/layout/song_item.xml
@@ -6,26 +6,46 @@
     android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/songitem_overview_cardView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/songitem_overview_cardview"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        app:cardCornerRadius="15dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:cardCornerRadius="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
             android:id="@+id/songitem_overview_image"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:scaleType="centerCrop"
-            app:srcCompat="@drawable/category2" />
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:srcCompat="@drawable/category2" />
 
+        <ImageView
+            android:id="@+id/sonitem_overview_playbutton"
+            android:layout_width="52dp"
+            android:layout_height="49dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="30dp"
+            app:srcCompat="@android:drawable/ic_media_play" />
+
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/songitem_favorite_cardView"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginEnd="-10dp"
+        android:layout_marginBottom="-10dp"
+        app:cardCornerRadius="25dp"
+        app:layout_constraintBottom_toBottomOf="@+id/songitem_overview_cardview"
+        app:layout_constraintEnd_toEndOf="@+id/songitem_overview_cardview">
+
+        <ImageView
+            android:id="@+id/songitem_favorite_starimage"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:srcCompat="@drawable/baseline_favorite_24" />
     </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
