--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,23 +2,19 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/home"
+        android:id="@+id/ic_home"
         android:icon="@drawable/baseline_home_24"
         android:title="@string/home"/>
     <item
-        android:id="@+id/library"
-        android:icon="@drawable/baseline_library_24"
-        android:title="@string/library"/>
-    <item
-        android:id="@+id/timer"
+        android:id="@+id/ic_timer"
         android:icon="@drawable/baseline_timeshow_24"
         android:title="@string/timer"/>
    <item
-       android:id="@+id/favorite"
+       android:id="@+id/ic_favorite"
        android:icon="@drawable/baseline_favorite_24"
        android:title="@string/favorite"/>
     <item
-        android:id="@+id/dashboard"
+        android:id="@+id/ic_dashboard"
         android:icon="@drawable/baseline_dashboard_24"
         android:title="@string/dashboard"/>
 </menu>
