--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,5 +11,5 @@
     <color name="pn_gold_ori">#D6BA96</color>
     <color name="pn_yellow_light_ori">#FFFCDC</color>
     <color name="pn_blue_dark_ori">#5395AC</color>
-    <color name="pn_blue_light_ori">#74C8E6</color>
+    <color name="pn_blue_light_ori">#87B0BE</color>
 </resources>
