--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/splashFragment">
+    app:startDestination="@id/checkFragment">
 
     <fragment
         android:id="@+id/testFragment"
@@ -37,7 +37,14 @@
         android:id="@+id/timerFragment"
         android:name="com.example.powernapping.ui.TimerFragment"
         android:label="fragment_timer"
-        tools:layout="@layout/fragment_timer" />
+        tools:layout="@layout/fragment_timer" >
+        <action
+            android:id="@+id/action_timerFragment_to_checkFragment"
+            app:destination="@id/checkFragment" />
+        <action
+            android:id="@+id/action_timerFragment_to_timePickerFragment"
+            app:destination="@id/timePickerFragment" />
+    </fragment>
     <fragment
         android:id="@+id/favoriteFragment"
         android:name="com.example.powernapping.ui.FavoriteFragment"
@@ -57,10 +64,23 @@
         <action
             android:id="@+id/action_bottomMenuNavigationFragment_to_timerFragment"
             app:destination="@id/timerFragment" />
+        <action
+            android:id="@+id/action_bottomMenuNavigationFragment_to_dashboardFragment"
+            app:destination="@id/dashboardFragment" />
     </fragment>
     <fragment
         android:id="@+id/dashboardFragment"
         android:name="com.example.powernapping.ui.DashboardFragment"
         android:label="fragment_dashboard"
         tools:layout="@layout/fragment_dashboard" />
+    <fragment
+        android:id="@+id/checkFragment"
+        android:name="com.example.powernapping.ui.TimerCheckFragment"
+        android:label="fragment_check"
+        tools:layout="@layout/fragment_timer_check" />
+    <fragment
+        android:id="@+id/timePickerFragment"
+        android:name="com.example.powernapping.ui.TimePickerFragment"
+        android:label="fragment_time_picker"
+        tools:layout="@layout/fragment_time_picker" />
 </navigation>
