--- a/app/src/main/res/layout/fragment_timer.xml
+++ b/app/src/main/res/layout/fragment_timer.xml
@@ -20,6 +20,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <!-- time will be showed in this textView -->
     <TextView
         android:id="@+id/timer_showprogress_text"
         android:layout_width="wrap_content"
@@ -27,12 +28,12 @@
         android:fontFamily="@font/inter_medium"
         android:textAppearance="@style/TextAppearance.AppCompat"
         android:textColor="@color/pn_aubergine_ori"
-        android:textSize="45sp"
+        android:textSize="60sp"
         app:layout_constraintBottom_toBottomOf="@+id/progress_bar"
         app:layout_constraintEnd_toEndOf="@+id/progress_bar"
         app:layout_constraintStart_toStartOf="@+id/progress_bar"
         app:layout_constraintTop_toTopOf="@+id/progress_bar"
-        tools:text="00:10:00" />
+        tools:text="00:10" />
 
     <ProgressBar
         android:id="@+id/progress_bar"
@@ -47,6 +48,7 @@
         app:layout_constraintVertical_bias="0.291"
         tools:progress="60" />
 
+    <!-- button to check:i feel (emoji slider) -->
     <Button
         android:id="@+id/timer_check_button"
         android:layout_width="0dp"
@@ -65,6 +67,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/timer_restart_fab" />
 
+    <!-- restart button -->
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/timer_restart_fab"
         android:layout_width="wrap_content"
@@ -81,6 +84,7 @@
         app:layout_constraintVertical_bias="0.823"
         app:tint="#5395AC" />
 
+    <!-- start button -->
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/timer_play_fab"
         android:layout_width="wrap_content"
@@ -98,6 +102,7 @@
         app:layout_constraintVertical_bias="0.836"
         app:tint="#D6BA96" />
 
+    <!-- TODO delete -->
     <Button
         android:id="@+id/minus_button"
         android:layout_width="wrap_content"
@@ -107,6 +112,7 @@
         app:layout_constraintStart_toStartOf="@+id/progress_bar"
         app:layout_constraintTop_toBottomOf="@+id/progress_bar" />
 
+    <!-- TODO delete -->
     <Button
         android:id="@+id/plus_button"
         android:layout_width="wrap_content"
@@ -115,19 +121,5 @@
         android:text="+10%"
         app:layout_constraintEnd_toEndOf="@+id/progress_bar"
         app:layout_constraintTop_toBottomOf="@+id/progress_bar" />
-
-
-    <!--
-    <me.zhanghai.android.materialprogressbar.MaterialProgressBar
-        android:layout_width="240dp"
-        android:layout_height="245dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/> -->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
