--- a/app/src/main/res/layout/fragment_timer.xml
+++ b/app/src/main/res/layout/fragment_timer.xml
@@ -21,6 +21,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <!-- time will be showed in this textView -->
+
     <TextView
         android:id="@+id/timer_showprogress_text"
         android:layout_width="wrap_content"
@@ -28,15 +29,18 @@
         android:fontFamily="@font/inter_medium"
         android:textAppearance="@style/TextAppearance.AppCompat"
         android:textColor="@color/pn_aubergine_ori"
-        android:textSize="60sp"
-        app:layout_constraintBottom_toBottomOf="@+id/progress_bar"
-        app:layout_constraintEnd_toEndOf="@+id/progress_bar"
-        app:layout_constraintStart_toStartOf="@+id/progress_bar"
-        app:layout_constraintTop_toTopOf="@+id/progress_bar"
-        tools:text="00:10" />
+        android:textSize="50sp"
+        app:layout_constraintBottom_toBottomOf="@+id/nap_progress_bar"
+        app:layout_constraintEnd_toEndOf="@+id/nap_progress_bar"
+        app:layout_constraintHorizontal_bias="0.374"
+        app:layout_constraintStart_toStartOf="@+id/nap_progress_bar"
+        app:layout_constraintTop_toTopOf="@+id/nap_progress_bar"
+        app:layout_constraintVertical_bias="0.489"
+        tools:text="0" />
 
+    <!-- button to check:i feel (emoji slider) -->
     <ProgressBar
-        android:id="@+id/progress_bar"
+        android:id="@+id/nap_progress_bar"
         style="@style/CircularDeterminateProgressBar"
         android:layout_width="350dp"
         android:layout_height="350dp"
@@ -45,10 +49,9 @@
         app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.291"
+        app:layout_constraintVertical_bias="0.278"
         tools:progress="60" />
 
-    <!-- button to check:i feel (emoji slider) -->
     <Button
         android:id="@+id/timer_check_button"
         android:layout_width="0dp"
@@ -102,24 +105,18 @@
         app:layout_constraintVertical_bias="0.836"
         app:tint="#D6BA96" />
 
-    <!-- TODO delete -->
-    <Button
-        android:id="@+id/minus_button"
+    <TextView
+        android:id="@+id/timer_min_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="-10%"
-        app:layout_constraintStart_toStartOf="@+id/progress_bar"
-        app:layout_constraintTop_toBottomOf="@+id/progress_bar" />
-
-    <!-- TODO delete -->
-    <Button
-        android:id="@+id/plus_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="+10%"
-        app:layout_constraintEnd_toEndOf="@+id/progress_bar"
-        app:layout_constraintTop_toBottomOf="@+id/progress_bar" />
+        android:layout_marginLeft="16dp"
+        android:layout_marginBottom="-3dp"
+        android:fontFamily="@font/inter_medium"
+        android:text="@string/min"
+        android:textColor="@color/pn_aubergine_ori"
+        android:textSize="40dp"
+        app:layout_constraintBottom_toBottomOf="@+id/timer_showprogress_text"
+        app:layout_constraintStart_toEndOf="@+id/timer_showprogress_text"
+        app:layout_constraintTop_toTopOf="@+id/timer_showprogress_text" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
