--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -41,6 +41,9 @@
         <action
             android:id="@+id/action_timerFragment_to_checkFragment"
             app:destination="@id/checkFragment" />
+        <action
+            android:id="@+id/action_timerFragment_to_timePickerFragment"
+            app:destination="@id/timePickerFragment" />
     </fragment>
     <fragment
         android:id="@+id/favoriteFragment"
@@ -77,6 +80,15 @@
         tools:layout="@layout/fragment_timer_check" >
         <action
             android:id="@+id/action_checkFragment_to_timerFragment"
+            app:destination="@id/timerFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/timePickerFragment"
+        android:name="com.example.powernapping.ui.TimePickerFragment"
+        android:label="fragment_time_picker2"
+        tools:layout="@layout/fragment_time_picker" >
+        <action
+            android:id="@+id/action_timePickerFragment_to_timerFragment"
             app:destination="@id/timerFragment" />
     </fragment>
 </navigation>
