--- a/app/src/main/res/layout/fragment_timer.xml
+++ b/app/src/main/res/layout/fragment_timer.xml
@@ -7,6 +7,7 @@
     android:background="@color/white"
     tools:context=".ui.TimerFragment">
 
+    <!-- title of timer fragment -->
     <TextView
         android:id="@+id/timer_title_text"
         android:layout_width="wrap_content"
@@ -21,7 +22,6 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <!-- time will be showed in this textView -->
-
     <TextView
         android:id="@+id/timer_showprogress_text"
         android:layout_width="wrap_content"
@@ -32,13 +32,13 @@
         android:textSize="50sp"
         app:layout_constraintBottom_toBottomOf="@+id/nap_progress_bar"
         app:layout_constraintEnd_toEndOf="@+id/nap_progress_bar"
-        app:layout_constraintHorizontal_bias="0.374"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="@+id/nap_progress_bar"
         app:layout_constraintTop_toTopOf="@+id/nap_progress_bar"
-        app:layout_constraintVertical_bias="0.489"
-        tools:text="0" />
+        app:layout_constraintVertical_bias="0.492"
+        tools:text="00:00" />
 
-    <!-- button to check:i feel (emoji slider) -->
+    <!-- progress bar while timer runs -->
     <ProgressBar
         android:id="@+id/nap_progress_bar"
         style="@style/CircularDeterminateProgressBar"
@@ -50,8 +50,9 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.278"
-        tools:progress="60" />
+        android:indeterminate="false"/>
 
+    <!-- button for navigation to check: i feel (emoji slider) -->
     <Button
         android:id="@+id/timer_check_button"
         android:layout_width="0dp"
@@ -70,7 +71,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/timer_restart_fab" />
 
-    <!-- restart button -->
+    <!-- restart button for timer -->
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/timer_restart_fab"
         android:layout_width="wrap_content"
@@ -87,7 +88,7 @@
         app:layout_constraintVertical_bias="0.823"
         app:tint="#5395AC" />
 
-    <!-- start button -->
+    <!-- start button for timer -->
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/timer_play_fab"
         android:layout_width="wrap_content"
@@ -105,18 +106,6 @@
         app:layout_constraintVertical_bias="0.836"
         app:tint="#D6BA96" />
 
-    <TextView
-        android:id="@+id/timer_min_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginBottom="-3dp"
-        android:fontFamily="@font/inter_medium"
-        android:text="@string/min"
-        android:textColor="@color/pn_aubergine_ori"
-        android:textSize="40dp"
-        app:layout_constraintBottom_toBottomOf="@+id/timer_showprogress_text"
-        app:layout_constraintStart_toEndOf="@+id/timer_showprogress_text"
-        app:layout_constraintTop_toTopOf="@+id/timer_showprogress_text" />
+    <!-- writes the word min behind the running time -->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
