--- a/app/src/main/res/layout/fragment_favorite.xml
+++ b/app/src/main/res/layout/fragment_favorite.xml
@@ -19,6 +19,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/FavoritenRecyclerView"
         android:layout_width="409dp"
         android:layout_height="673dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
