--- a/app/src/main/res/layout/song_item.xml
+++ b/app/src/main/res/layout/song_item.xml
@@ -9,9 +9,11 @@
         android:id="@+id/songitem_overview_cardview"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="3dp"
+        android:layout_marginTop="3dp"
+        android:layout_marginBottom="3dp"
         app:cardCornerRadius="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -29,23 +31,6 @@
             android:layout_marginTop="30dp"
             app:srcCompat="@android:drawable/ic_media_play" />
 
-    </androidx.cardview.widget.CardView>
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/songitem_favorite_cardView"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginEnd="-10dp"
-        android:layout_marginBottom="-10dp"
-        app:cardCornerRadius="25dp"
-        app:layout_constraintBottom_toBottomOf="@+id/songitem_overview_cardview"
-        app:layout_constraintEnd_toEndOf="@+id/songitem_overview_cardview">
-
-        <ImageView
-            android:id="@+id/songitem_favorite_starimage"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:srcCompat="@drawable/baseline_favorite_24" />
     </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
