--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,19 +2,19 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/ic_home"
+        android:id="@+id/homeFragment"
         android:icon="@drawable/baseline_home_24"
         android:title="@string/home"/>
     <item
-        android:id="@+id/ic_timer"
+        android:id="@+id/timerFragment"
         android:icon="@drawable/baseline_timeshow_24"
         android:title="@string/timer"/>
    <item
-       android:id="@+id/ic_favorite"
+       android:id="@+id/favoriteFragment"
        android:icon="@drawable/baseline_favorite_24"
        android:title="@string/favorite"/>
     <item
-        android:id="@+id/ic_dashboard"
+        android:id="@+id/dashboardFragment"
         android:icon="@drawable/baseline_dashboard_24"
         android:title="@string/dashboard"/>
 </menu>
