--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,75 +3,53 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/splashFragment">
+    app:startDestination="@id/homeFragment">
 
     <fragment
-        android:id="@+id/testFragment"
-        android:name="com.example.powernapping.TestFragment"
-        android:label="fragment_test"
-        tools:layout="@layout/fragment_test" />
-    <fragment
-        android:id="@+id/splashFragment"
-        android:name="com.example.powernapping.ui.SplashFragment"
-        android:label="fragment_splash"
-        tools:layout="@layout/fragment_splash" >
-        <action
-            android:id="@+id/action_splashFragment_to_loginFragment"
-            app:destination="@id/loginFragment" />
-    </fragment>
-    <fragment
         android:id="@+id/loginFragment"
-        android:name="com.example.powernapping.ui.LoginFragment"
+        android:name="com.example.powernapping.ui.authentication.LoginFragment"
         android:label="fragment_login"
         tools:layout="@layout/fragment_login" >
         <action
-            android:id="@+id/action_loginFragment_to_bottomMenuNavigationFragment"
-            app:destination="@id/bottomMenuNavigationFragment" />
+            android:id="@+id/action_loginFragment_to_signUpFragment"
+            app:destination="@id/signUpFragment" />
     </fragment>
     <fragment
         android:id="@+id/homeFragment"
         android:name="com.example.powernapping.ui.HomeFragment"
-        android:label="fragment_home"
-        tools:layout="@layout/fragment_home" />
+        android:label="Home"
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_homeFragment_to_favoriteFragment3"
+            app:destination="@id/favoriteFragment" />
+        <action
+            android:id="@+id/action_homeFragment_to_timerFragment3"
+            app:destination="@id/timerFragment" />
+        <action
+            android:id="@+id/action_homeFragment_to_dashboardFragment3"
+            app:destination="@id/dashboardFragment" />
+    </fragment>
     <fragment
         android:id="@+id/timerFragment"
         android:name="com.example.powernapping.ui.TimerFragment"
-        android:label="fragment_timer"
+        android:label="Timer"
         tools:layout="@layout/fragment_timer" >
-        <action
-            android:id="@+id/action_timerFragment_to_checkFragment"
-            app:destination="@id/checkFragment" />
         <action
             android:id="@+id/action_timerFragment_to_timePickerFragment"
             app:destination="@id/timePickerFragment" />
+        <action
+            android:id="@+id/action_timerFragment_to_checkFragment"
+            app:destination="@id/checkFragment" />
     </fragment>
     <fragment
         android:id="@+id/favoriteFragment"
         android:name="com.example.powernapping.ui.FavoriteFragment"
-        android:label="fragment_favorite"
+        android:label="100 most popular"
         tools:layout="@layout/fragment_favorite" />
-    <fragment
-        android:id="@+id/bottomMenuNavigationFragment"
-        android:name="com.example.powernapping.BottomMenuNavigationActivity"
-        android:label="fragment_bottom_menu_navigation"
-        tools:layout="@layout/fragment_bottom_menu_navigation" >
-        <action
-            android:id="@+id/action_bottomMenuNavigationFragment_to_homeFragment"
-            app:destination="@id/homeFragment" />
-        <action
-            android:id="@+id/action_bottomMenuNavigationFragment_to_favoriteFragment2"
-            app:destination="@id/favoriteFragment" />
-        <action
-            android:id="@+id/action_bottomMenuNavigationFragment_to_timerFragment"
-            app:destination="@id/timerFragment" />
-        <action
-            android:id="@+id/action_bottomMenuNavigationFragment_to_dashboardFragment"
-            app:destination="@id/dashboardFragment" />
-    </fragment>
     <fragment
         android:id="@+id/dashboardFragment"
         android:name="com.example.powernapping.ui.DashboardFragment"
-        android:label="fragment_dashboard"
+        android:label="Dashboard"
         tools:layout="@layout/fragment_dashboard" />
     <fragment
         android:id="@+id/checkFragment"
@@ -91,4 +69,9 @@
             android:id="@+id/action_timePickerFragment_to_timerFragment"
             app:destination="@id/timerFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/signUpFragment"
+        android:name="com.example.powernapping.ui.authentication.SignUpFragment"
+        android:label="fragment_signup"
+        tools:layout="@layout/fragment_signup" />
 </navigation>
