created launcher icon, no bottom manu bar in login and signUp screen

--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -4,18 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/pn_blue_light_ori"
-    tools:context=".ui.authentication.LoginFragment" >
+    android:background="@drawable/background_gradient"
+    tools:context=".ui.authentication.LoginFragment">
 
     <Button
         android:id="@+id/login_signup_button"
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginTop="24dp"
-        android:backgroundTint="@color/pn_gold_ori"
+        android:backgroundTint="#E6E5DD"
         android:text="sign up"
         android:textColor="@color/pn_aubergine_ori"
         android:textSize="20sp"
+        app:cornerRadius="10dp"
         app:iconTint="@color/black"
         app:layout_constraintEnd_toEndOf="@+id/login_signin_button"
         app:layout_constraintStart_toStartOf="@+id/login_signin_button"
@@ -40,6 +41,9 @@
         android:ems="10"
         android:hint="@string/email"
         android:inputType="textEmailAddress"
+        android:paddingLeft="14sp"
+        android:textColor="@color/pn_aubergine_ori"
+        android:textColorHint="@color/pn_aubergine_ori"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="@+id/login_logo_imageview"
         app:layout_constraintStart_toStartOf="@+id/login_logo_imageview"
@@ -54,6 +58,9 @@
         android:ems="10"
         android:hint="@string/password"
         android:inputType="textPassword"
+        android:paddingLeft="14sp"
+        android:textColor="@color/pn_aubergine_ori"
+        android:textColorHint="@color/pn_aubergine_ori"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="@+id/login_EmailAddress_text"
         app:layout_constraintStart_toStartOf="@+id/login_EmailAddress_text"
@@ -68,6 +75,7 @@
         android:text="sign in"
         android:textColor="@color/pn_aubergine_ori"
         android:textSize="20sp"
+        app:cornerRadius="10dp"
         app:iconTint="@color/black"
         app:layout_constraintEnd_toEndOf="@+id/login_password_text"
         app:layout_constraintStart_toStartOf="@+id/login_password_text"
