--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/pn_blue_light_ori"
+    android:background="@drawable/background_gradient"
     tools:context=".ui.authentication.SignUpFragment">
 
     <Button
@@ -12,10 +12,11 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:backgroundTint="@color/pn_gold_ori"
+        android:backgroundTint="#E6E5DD"
         android:text="cancel"
         android:textColor="@color/pn_aubergine_ori"
         android:textSize="20sp"
+        app:cornerRadius="10dp"
         app:iconTint="@color/black"
         app:layout_constraintEnd_toEndOf="@+id/signup_signup_button"
         app:layout_constraintStart_toStartOf="@+id/signup_signup_button"
@@ -40,6 +41,9 @@
         android:ems="10"
         android:hint="@string/email"
         android:inputType="textEmailAddress"
+        android:paddingLeft="14sp"
+        android:textColor="@color/pn_aubergine_ori"
+        android:textColorHint="@color/pn_aubergine_ori"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="@+id/signup_logo_imageview"
         app:layout_constraintStart_toStartOf="@+id/signup_logo_imageview"
@@ -54,6 +58,9 @@
         android:ems="10"
         android:hint="@string/password"
         android:inputType="textPassword"
+        android:paddingLeft="14sp"
+        android:textColor="@color/pn_aubergine_ori"
+        android:textColorHint="@color/pn_aubergine_ori"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="@+id/signup_EmailAddress_text"
         app:layout_constraintStart_toStartOf="@+id/signup_EmailAddress_text"
@@ -62,12 +69,13 @@
     <Button
         android:id="@+id/signup_signup_button"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_marginTop="32dp"
         android:backgroundTint="@color/pn_gold_ori"
         android:text="sign up"
         android:textColor="@color/pn_aubergine_ori"
         android:textSize="20sp"
+        app:cornerRadius="10dp"
         app:iconTint="@color/black"
         app:layout_constraintEnd_toEndOf="@+id/signup_password_text"
         app:layout_constraintStart_toStartOf="@+id/signup_password_text"
