--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -4,5 +4,6 @@
         <item>@font/felipa</item>
         <item>@font/inter_medium</item>
         <item>@font/italianno</item>
+        <item>@font/orbitron_medium</item>
     </array>
 </resources>
